bridge/base/api-deployment.yaml
#! api-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: api
    namespace: co2-prediction
    labels:
        com.docker.compose.project: co2-prediction
        com.docker.compose.service: api
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: co2-prediction
            com.docker.compose.service: api
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: co2-prediction
                com.docker.compose.service: api
                com.docker.compose.network.default: "true"
        spec:
            containers:
                - name: api
                  image: co2-prediction-api
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: api-8000
                      containerPort: 8000
